fixed bookmark border-radius + subtitle overflow

--- a/Styles/bookmark.css
+++ b/Styles/bookmark.css
@@ -31,13 +31,13 @@
     background-color: black;
     color: white;
     border: white solid 1px;
-    border-top: 0;
-    border-bottom: 0;
-    margin: 0px 2px;
+
+    margin: 2px 2px;
     font-size: 150%;
     text-wrap: nowrap;
     transition: all 0.5s ease;
     min-width: 150px;
+    border-radius: 10px;
 }
 
 .bookmark-button:hover {
